--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.10.1",
     "apexcharts": "^3.44.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
